[gd_scene load_steps=3 format=2]

[ext_resource path="res://singletone/command_system.gd" type="Script" id=1]
[ext_resource path="res://singletone/command_system_dependecy/command_api.gd" type="Script" id=3]

[node name="CommandSystem" type="Node" groups=["command_system"]]
script = ExtResource( 1 )

[node name="CommandAPI" type="Node" parent="."]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="CommandSystemInterface" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CommandSystemInterface"]
anchor_left = 0.00976562
anchor_top = 0.0166667
anchor_right = 0.990234
anchor_bottom = 0.0566667
margin_top = -9.53674e-07
margin_bottom = -34.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CommandInput" type="LineEdit" parent="CanvasLayer/CommandSystemInterface/HBoxContainer"]
margin_right = 949.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "type the command..."

[node name="RunButton" type="Button" parent="CanvasLayer/CommandSystemInterface/HBoxContainer"]
margin_left = 953.0
margin_right = 1003.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 0 )
text = "run"

[node name="Console" type="ScrollContainer" parent="CanvasLayer/CommandSystemInterface"]
anchor_left = 0.00976562
anchor_top = 0.075
anchor_right = 0.990234
anchor_bottom = 0.983333
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Log" type="VBoxContainer" parent="CanvasLayer/CommandSystemInterface/Console"]
margin_right = 1004.0
margin_bottom = 545.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[connection signal="text_changed" from="CanvasLayer/CommandSystemInterface/HBoxContainer/CommandInput" to="." method="_on_CommandInput_text_changed"]
[connection signal="text_entered" from="CanvasLayer/CommandSystemInterface/HBoxContainer/CommandInput" to="." method="_on_CommandInput_text_entered"]
[connection signal="pressed" from="CanvasLayer/CommandSystemInterface/HBoxContainer/RunButton" to="." method="_on_RunButton_pressed"]
