extends Node

func _ready():
	pass # Replace with function body.


func _on_CommandInput_text_entered(new_text):
	pass # Replace with function body.


func _on_CommandInput_text_changed(new_text):
	pass # Replace with function body.


func _on_RunButton_pressed():
	pass # Replace with function body.
